--- a/profilingDemo.ipynb
+++ b/profilingDemo.ipynb
@@ -13,13 +13,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "metadata": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "finished\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')\n",
     "a = b = 1\n",
     "\n",
     "import pandas as pd\n",
@@ -30,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -55,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -67,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5c54bd3342048b98fae7e186c7e7688",
+       "model_id": "6186e101ed8c4895994b17852c403319",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +115,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   }
